Fixed some redirections.

--- a/sled_queries/templates/sled_queries/query_link.html
+++ b/sled_queries/templates/sled_queries/query_link.html
@@ -12,7 +12,7 @@ Share query
 </div>
 
 <div>
-  <a href="{{ request.get_host }}{{ query.get_GET_url }}">
+  <a href="{{ request.scheme }}://{{ request.get_host }}{{ query.get_GET_url }}">
     {{ request.get_host }}{{ query.get_GET_url }}
   </a>
 </div>
