--- a/home/templates/home/home_index.html
+++ b/home/templates/home/home_index.html
@@ -6,6 +6,26 @@
   <p>Welcome to the Strong Lensing Database</p>
   <img src="{% static 'images/JB_Homepage_Grid.png' %}" alt="">
 </div>
+
+<div>
+  <p>Activity stream</p>
+  {% if stream %}
+  <table>
+    <tbody>
+      {% for action in stream %}
+      <tr>
+	<td>{{ action.timestamp|timesince }} ago</td>
+	<td>{{ action.actor }}</td>
+	<td>{{ action.verb }}</td>
+      </tr>
+      {% endfor %}
+    </tbody>
+  </table>
+  {% else %}
+  No activity to display
+  {% endif %}
+</div>
+
 <div class="jb-container">
   <img src="{% static 'images/JB_Homepage_EPFL.png' %}" loading="lazy" width="100" alt="">
   <img src="{% static 'images/JB_Homepage_ERC.png' %}" loading="lazy" width="75" alt="">
